[package]
name = "pocket-relay-mitm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Blaze packet system 
blaze-pk = "^0.8"
# Blaze SSLv3 async TCPStream implementation
blaze-ssl-async = "^0.3"
# Serde for serialization mostly in the HTTP server but also
# used elsewhere to do define custom serialization
serde = { version = "1", features = ["derive"] }
# Logging facade
log = "0.4"
# HTTP Client
[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["json", "rustls-tls"]
# Tokio async runtime
[dependencies.tokio]
version = "1"
features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync"]
# Logging provider 
[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["gzip", "console_appender", "file_appender"]
